# EndpointAssessment

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: client.rs  config.rs  main.rs  service.rs
agent/src/checks/: executor.rs  mod.rs  types.rs
agent/src/collectors/: system.rs
common/: Cargo.toml
common/src/: checks.rs  lib.rs  models.rs  protocol.rs
migrations/: 20240101000001_initial_schema.sql
packaging/: build.sh
packaging/linux/deb/: cargo-deb.toml
packaging/linux/deb/scripts/: postinst  postrm  preinst  prerm
packaging/linux/rpm/: endpoint-agent.spec
packaging/linux/systemd/: agent.conf  endpoint-agent.service
packaging/macos/launchd/: com.endpointassessment.agent.plist
packaging/macos/pkg/: build-pkg.sh
packaging/macos/pkg/scripts/: postinstall  preinstall
packaging/windows/wix/: build-msi.ps1  license.rtf  main.wxs  readme.txt
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/api/: admin.rs  agent.rs  mod.rs
server/src/db/: checks.rs  endpoints.rs  mod.rs  results.rs  snapshots.rs  users.rs
server/src/services/: background.rs  mod.rs
server/src/web/: auth.rs  mod.rs  routes.rs  templates.rs
server/templates/: base.html  check_form.html  checks.html  dashboard.html  endpoint_detail.html  endpoints.html  login.html  reports.html
