[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System info
sysinfo = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Regex for pattern matching
regex = { workspace = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-service = "0.6"
