[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# Templates
askama = { workspace = true }
askama_axum = { workspace = true }

# Validation
validator = { workspace = true }

# Time for cookie handling
time = "0.3"
